# SemWare

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: example_usage.py  run_semware.py  test_enhanced_semantic_search.py  test_enhanced_similar_search.py  test_schema.py  test_semware.py  test_with_auth.py
src/semware/: __init__.py  auth.py  client.py  database.py  embeddings.py  main.py  text_processing.py
src/zendown_ai/: database.py  embeddings.py  main.py
